tests/parser-test-files/bad-files/parse-toplevel.1.error
error: Malformed toplevel form
  --> test:4:1
   |
 4 |  ((define) x 5)
   |   ^^^^^^^^ unexpected list
